2008-05-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/apps/index.xml:
	  Add an app and fix up another one.

2008-04-24  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-bad/0.10.7.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.8.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:

	Release 0.10.8 of good, 0.10.7 of bad

2008-04-03  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.19.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.19.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:

	Release 0.10.19 of core and base.

2008-03-23  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Fix link to python tarball

2008-03-21  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.18.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-python/0.10.11.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.18.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	Release Core 0.10.18, Base 0.10.18 and Python 0.10.11

2008-03-02  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add more versions.

2008-02-21  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/lists/index.xml:
	Add the gstreamer-embedded mailing list to the rank.

2008-02-21  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-bad/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-good/0.10.7.xml: