@@ -1,3 +1,8 @@
+2008-05-09  Tim-Philipp Müller  <tim.muller at collabora co uk>
+
+	* src/htdocs/bugs/bugs.xml:
+	  More milestones.
+
 2008-05-06  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/apps/index.xml:
